# volumesource

./: CMakeLists.txt  LICENSE  README.md
src/calc/: Translate.cpp  Translate.h  VolumeCalc.cpp  VolumeCalc.h
src/formats/stl/: StlAsciiParser.cpp  StlAsciiParser.h
src/main/: Options.cpp  Options.h  main.cpp
src/mesh/: BoundingBox.h  Edge.h  Face.h  Mesh.h  Vector.h  Vertex.h
src/server/: RequestPathParser.cpp  RequestPathParser.h  connection.hpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.hpp  server.hpp  windows_defs.h
src/service/: VolumeCalculator.cpp  VolumeCalculator.h
tests/: index.html
